projects/vb6parse/snapshots/parsers/cst/file_operations/open/open_in_if_statement.snap
---
source: projects/vb6parse/tests/file_operations/open.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: IfStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: IfKeyword
                  text: If
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: fileExists
                - kind: Whitespace
                  text: " "
                - kind: ThenKeyword
                  text: Then
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: OpenStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: OpenKeyword
                          text: Open
                        - kind: Whitespace
                          text: " "
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"TESTFILE\""
                        - kind: Whitespace
                          text: " "
                        - kind: ForKeyword
                          text: For
                        - kind: Whitespace
                          text: " "
                        - kind: KeywordClause
                          children:
                            - kind: InputKeyword
                              text: Input
                        - kind: Whitespace
                          text: " "
                        - kind: ExpressionClause
                          children:
                            - kind: AsKeyword
                              text: As
                            - kind: Whitespace
                              text: " "
                            - kind: IdentifierExpression
                              children:
                                - kind: Octothorpe
                                  text: "#"
                                - kind: IntegerLiteral
                                  text: "1"
                    - kind: Newline
                      text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: IfKeyword
                  text: If
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
